--- a/vv/index.html
+++ b/vv/index.html
@@ -29,22 +29,22 @@
         MORE
       </h7>
       <div class="text1">
-        What is it like to be young and free
-        minded in North Korea
+       <i> What is it like to be young and free
+        minded in North Korea</i><br>
+        Fucse amet ligula omare tempus vulputate
+    ipsum semper. Praesent non lorem odio. Fusce
+    sed dui massa eu viverra erat.
   </div>
   <div class="text2">
-    Mysterious rolls in the fields
-  </div>
-  <div class="subtext1">
+    <i2>Mysterious rolls in the fields</i2><br>
     Fucse amet ligula omare tempus vulputate
     ipsum semper. Praesent non lorem odio. Fusce
     sed dui massa eu viverra erat.
   </div>
-  <div class="subtext2">
-    Fucse amet ligula omare tempus vulputate
-    ipsum semper. Praesent non lorem odio. Fusce
-    sed dui massa eu viverra erat.
-  </div>
+  <div class="image2">
+        <img src="5.jpg" width="500" alt="" />
+        <h8>MORE</h8>
+      </div>
 </div>
   </body>
 </html>
